# GridTrust

./: LICENSE  README.md
PUF_code/: README  README.md
archive/: README.md
archive/native/code/: Cargo.toml
archive/native/code/src/: puf_reader.rs  relay.rs  updater.rs
interface/: base64.sh
interface/code/: Cargo.toml  base64.sh
interface/code/src/: main.rs  puf_reader.rs  relay.rs  relay_deprecated.rs  temp_sensor.rs  updater.rs
interface/updates/bad_update/: update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  vendor_sign.txt  vendor_sign64.txt
interface/updates/bad_updates_751/: sign_and_transfer.sh  update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  utility.private.pem  vendor_sign.txt  vendor_sign64.txt
interface/updates/close_command_751/: update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  vendor_sign.txt  vendor_sign64.txt
interface/updates/good_updates/: update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  vendor.private.pem  vendor_sign.txt  vendor_sign64.txt
interface/updates/good_updates_751/: update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  vendor_sign.txt  vendor_sign64.txt
interface/updates/open_command_751/: update64.txt  updatecommands.txt  util_sign.txt  util_sign64.txt  vendor_sign.txt  vendor_sign64.txt
native/: base64.sh
native/code/src/: main.rs  puf_reader.rs  relay.rs  updater.rs
native/updates/Fahrenheit/: update64.txt  (+5 more)
puftest/: README.md
puftest/code/: Cargo.toml
relaytest/: README.md
relaytest/code/: Cargo.toml  update.txt
relaytest/code/src/: main.rs
server/: docker-compose.yaml  nginx.conf  sql_setup  startup.sh
server/code/: Cargo.toml
server/code/src/: constants.rs  main.rs
servertest/: README.md
servertest/code/: Cargo.toml
tempsensortest/: README.md
tempsensortest/code/: Cargo.toml  cargo.toml
(+14 files in other folders)
