[package]
name = "relaytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serial = "0.4"
serialport = "4.0.1"
clap = "2.32"
typenum = "1.5.1"
subprocess = "0.2.8"
telnet = "0.2.1"
