[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
clap = "2.32"
postgres = "0.19"
aes = "0.8.1"
typenum = "1.5.1"
base64 = "0.13.0"
#openssl = "0.10.38"
subprocess = "0.2.8"
futures = "0.3"
#tokio-postgres = "0.7.5"
lazy_static = "1.4.0"