[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#reqwest = { version = "0.11", features = ["json", "rustls-tls", "native-tls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serial = "0.4"
serialport = "4.0.1"
clap = "2.32"
aes = "0.8.1"
typenum = "1.5.1"
base64 = "0.13.0"
openssl = "0.10"
subprocess = "0.2.8"
openssl-sys = "0.9.80"
rustls = "0.20.8"
